base/backend-login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-backend-login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mi-backend-login
  template:
    metadata:
      labels:
        app: mi-backend-login
    spec:
      containers:
        - name: mi-backend-login
          image: emi8977/microservicio-login:REPLACEME
          ports:
            - containerPort: 80
