base/backend-register-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-backend-register
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mi-backend-register
  template:
    metadata:
      labels:
        app: mi-backend-register
    spec:
      containers:
        - name: mi-backend-register
          image: emi8977/microservicio-register:REPLACEME
          ports:
            - containerPort: 5001
