base/backend-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-backend-dashboard-service
spec:
  type: NodePort
  selector:
    app: mi-backend-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
