base/backend-index-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-backend-index-service
spec:
  type: ClusterIP   # mejor que NodePort si usás Ingress
  selector:
    app: mi-backend-index
  ports:
    - protocol: TCP
      port: 80        # <-- siempre 80 hacia Ingress
      targetPort: 5000 # <-- el puerto real de tu contenedor Flask
