base/backend-login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-backend-login-service
spec:
  type: NodePort
  selector:
    app: mi-backend-login
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
