base/backend-register-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-backend-register-service
spec:
  type: NodePort
  selector:
    app: mi-backend-register
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
