base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-frontend-service
spec:
  type: NodePort
  selector:
    app: mi-frontend
  ports:
    - protocol: TCP
      port: 84       # puerto interno del Service
      targetPort: 80 # puerto del contenedor (Nginx)
