base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atale-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: atale.comercial.cloud
    http:
      paths:
      # Frontend (sirve HTML + JS + CSS)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mi-backend-index-service
            port:
              number: 80

      # Login API (/auth/*)
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: mi-backend-login-service
            port:
              number: 80

      # Register API (/users/*)
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: mi-backend-register-service
            port:
              number: 80

      # Dashboard API (/dashboard/*)
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: mi-backend-dashboard-service
            port:
              number: 80
